# morphdb

./: .gitignore  LICENSE  README.md  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  deploy-clones.yml  deploy-site.yml
deploy/aws/: README.md  dashboard_lambda.py  deploy.sh  lambda_function.py  setup-iam.sh  teardown.sh
design_discussions/: dynamodb-api-parity.md  dynamodb-billing-mode.md  dynamodb-contains-filters.md  dynamodb-correctness-vs-efficiency.md  dynamodb-credentials-iam.md  dynamodb-default-values.md  dynamodb-design-decisions.md  dynamodb-design-one-pager.md  dynamodb-docs-dashboard.md  dynamodb-env-config.md  dynamodb-exact-total-and-performance-modes.md  dynamodb-generic-field-index-items.md  dynamodb-iam-policy-examples.md  dynamodb-implementation-strategy.md  dynamodb-index-backfill.md  dynamodb-index-flag-semantics.md  dynamodb-indexing-strategy.md  dynamodb-key-schema.md  dynamodb-local-production.md  dynamodb-migration-scope.md  dynamodb-multiple-filters.md  dynamodb-optional-dependency.md  dynamodb-pagination.md  dynamodb-reindex.md  dynamodb-relation-filters.md  dynamodb-scale-target.md  dynamodb-sdk-runtime.md  dynamodb-sorting.md  dynamodb-stacked-pr-plan.md  dynamodb-storage-approach.md  dynamodb-storage-contract-tests.md  dynamodb-storage-interface.md  dynamodb-table-creation-policy.md  dynamodb-target-syntax.md  dynamodb-tenancy-table-boundary.md  dynamodb-test-tooling.md  dynamodb-testing-strategy.md  dynamodb-transactions-consistency.md
docs/: dynamodb-backend.md  morphdb-limitations.md  permissions-spec.html
docs/superpowers/specs/: 2026-06-26-portable-app-init-design.md
examples/: README.md  index.html
examples/asana/: index.html  morphdb.schema.json
examples/figma/: index.html  morphdb.schema.json
examples/linear/: index.html  morphdb.schema.json
examples/linkedin/: index.html  morphdb.schema.json
examples/live-todo/: index.html  morphdb-stream.js  stream.test.cjs
examples/notion/: index.html  morphdb.schema.json
examples/todo/: index.html  morphdb.schema.json
morphdb/: __init__.py  __main__.py  apps.py  associations.py  backend.py  db.py  errors.py  fieldindex.py  fieldtypes.py  objects.py  router.py  routes.py  schema.py  server.py  storage.py  streams.py  util.py
morphdb/cli/: __init__.py  __main__.py  dashboard.py  main.py  mcp.py  schema.py  service.py  skill.py
morphdb/skill/: SKILL.md
morphdb/skill/scripts/: morphdb_schema.py
pr-evidence/: aws-dynamodb-screen-recording.mov
site/: index.html
skill/: SKILL.md
skill/scripts/: morphdb_schema.py
specs/: comments.js  frontend-sdk.html  gaps.html  index.html  permissions.html  streaming.html
tests/: conftest.py  harness.py  test_apps.py  test_backend.py  test_cli.py  test_core.py  test_field_index.py  test_hardening.py  test_includes.py  test_mcp.py  test_morphdb.py  test_publish_seam.py  test_regressions.py  test_regressions2.py  test_regressions3.py  test_regressions4.py  test_regressions5.py  test_relations.py  test_stream_client.py  test_streaming_http.py  test_streams_core.py  test_streams_delta.py
