[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morphdb"
version = "0.1.3"
description = "A coding-agent-friendly, multi-tenant backend for vibe-coded websites. One process hosts many isolated apps; reshape each app's schema as fast as your agent iterates while the frontend keeps calling the same generic endpoints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "morphdb contributors" }]
keywords = ["database", "ai", "agent", "schema", "sqlite", "backend", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# Zero runtime dependencies — only the Python standard library.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
morphdb = "morphdb.cli.main:main"

[project.urls]
Homepage = "https://github.com/Savcab/morphdb"
Repository = "https://github.com/Savcab/morphdb"
Issues = "https://github.com/Savcab/morphdb/issues"

[tool.setuptools]
packages = ["morphdb", "morphdb.cli"]

# Ship the Claude skill (SKILL.md + the schema CLI) as package data so
# `morphdb install-skill` can materialize it from a pip/brew install.
[tool.setuptools.package-data]
morphdb = ["skill/SKILL.md", "skill/scripts/*.py"]
