[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morphdb"
# Single source of truth: the version lives only in morphdb/__init__.py
# (__version__); setuptools reads it from there at build time. Keeps one literal
# to bump, and the release CI reads the same value via `import morphdb`.
dynamic = ["version"]
description = "A coding-agent-friendly, multi-tenant backend for vibe-coded websites. One process hosts many isolated apps; reshape each app's schema as fast as your agent iterates while the frontend keeps calling the same generic endpoints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Felix Chen" }]
keywords = ["database", "ai", "agent", "schema", "sqlite", "postgres", "postgresql", "backend", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# Zero runtime dependencies for the default SQLite engine — only the Python
# standard library. PostgreSQL support is an opt-in extra (see below).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Persist to PostgreSQL instead of SQLite: pip install morphdb[postgres]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
morphdb = "morphdb.cli.main:main"

[project.urls]
Homepage = "https://github.com/Savcab/morphdb"
Repository = "https://github.com/Savcab/morphdb"
Issues = "https://github.com/Savcab/morphdb/issues"

[tool.setuptools]
packages = ["morphdb", "morphdb.cli"]

# Ship the Claude skill (SKILL.md) as package data so `morphdb install-skill`
# can materialize it from a pip/brew install.
[tool.setuptools.package-data]
morphdb = ["skill/SKILL.md"]

# Resolve the dynamic version from morphdb/__init__.py's __version__ (a plain
# string literal — setuptools reads it via ast.literal_eval, no import needed).
[tool.setuptools.dynamic]
version = { attr = "morphdb.__version__" }
